tests/samples/negative/resources/resource_index_assignment.ax
module resource_index_assignment;

fn overwrite<T>(values: []mut T, replacement: T) -> void {
    values[0] = replacement;
}

fn main() -> i32 {
    return 0;
}
